# kaleidoscope

./: BUILD.bazel  README.md
containers/kaleidoscope/: BUILD.bazel  Dockerfile
containers/riscv-gnu-toolchain/: Dockerfile
containers/riscv-llvm-toolchain/: BUILD.bazel  Dockerfile
containers/sysroot_linux/: Dockerfile
rules/: BUILD.bazel  kaleidoscope.bzl
toolchains/: BUILD.bazel  sample_compiler  sample_linker
